# video-to-steps

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CLAUDE.md.critique.md  Dockerfile  LICENSE  PLAN.md  PLAN.md.critique.md  README.md  README.md.critique.md  config.py  conftest.py  launch.sh  pricing.py  pyproject.toml  requirements.txt  server.py  setup.sh  start.sh  stop.sh
docs/design-plans/: 2026-05-18-vts-v1.md  2026-05-27-publish-to-github-pages.md
docs/test-plans/: 2026-05-18-vts-v1.md
pipeline/: _prompts.py  audio.py  caption_winners.py  captions.py  download.py  frames.py  llm_outline.py  llm_refine.py  match.py  pipeline.py  publish.py  publish_repo.py  storage.py  types.py
prompts/: outline.md  refine.md  vision_caption.md
providers/: embed.py  embed_jina.py  embed_mlx_clip.py  embed_vision_caption.py  llm.py  vision.py  whisper.py
scripts/: smoke_embed.py  smoke_llm.py  smoke_phase3.py  smoke_publish.py  smoke_vision.py
static/css/: main.css
templates/: _publish_controls_fragment.html  base.html  index.html  job.html  result.html  status_done_fragment.html  status_fragment.html
tests/: test_config.py  test_server.py  test_server_publish.py
tests/pipeline/: test_audio.py  test_caption_winners.py  test_captions.py  test_download.py  test_frames.py  test_llm_outline.py  test_llm_refine.py  test_match.py  test_pipeline.py  test_publish.py  test_publish_repo.py  test_publish_types.py  test_storage.py
tests/providers/: test_embed_factory.py  test_jina_embedder.py  test_llm_client.py  test_mlx_clip_factory.py  test_vision_captioner.py  (+1 more)
(+14 files in other folders)
